src/css/app.scss
@import './mixins.scss';

// We set 'position: relative' to cater For 'position: absolute' fullscreen
// divs that are a direct child element of <body>.
body {
  position: relative;
  color: white;
  background-color: rgba(0,0,0,0);
}

.hover-pointer:hover {
  cursor: pointer;
}

.focus-white:focus {
  color: #ffffff;
  outline: none;
}

.stroke {
  @include stroke;
}

// Use with q-select's options-selected-class option.
.q-select-active-option {
  color: white;
  background-color: #555555;
}

